HBASE-26899 Run spotless:apply