@@ -37,8 +37,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.ThreadLocalRandom;
+import java.util.concurrent.TimeUnit;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hbase.client.Admin;
 import org.apache.hadoop.hbase.client.Connection;
@@ -81,32 +81,34 @@ import org.apache.hbase.thirdparty.com.google.common.collect.Lists;
 /**
  * Test {@link org.apache.hadoop.hbase.MetaTableAccessor}.
  */
-@Category({MiscTests.class, MediumTests.class})
+@Category({ MiscTests.class, MediumTests.class })
 @SuppressWarnings("deprecation")
 public class TestMetaTableAccessor {
   @ClassRule
   public static final HBaseClassTestRule CLASS_RULE =
-      HBaseClassTestRule.forClass(TestMetaTableAccessor.class);
+    HBaseClassTestRule.forClass(TestMetaTableAccessor.class);
 
   private static final Logger LOG = LoggerFactory.getLogger(TestMetaTableAccessor.class);
-  private static final  HBaseTestingUtility UTIL = new HBaseTestingUtility();
+  private static final HBaseTestingUtility UTIL = new HBaseTestingUtility();
   private static Connection connection;
 
   @Rule
   public TestName name = new TestName();
 
-  @BeforeClass public static void beforeClass() throws Exception {
+  @BeforeClass
+  public static void beforeClass() throws Exception {
     UTIL.startMiniCluster(3);
 
     Configuration c = new Configuration(UTIL.getConfiguration());
     // Tests to 4 retries every 5 seconds. Make it try every 1 second so more
-    // responsive.  1 second is default as is ten retries.
+    // responsive. 1 second is default as is ten retries.
     c.setLong("hbase.client.pause", 1000);
     c.setInt(HConstants.HBASE_CLIENT_RETRIES_NUMBER, 10);
     connection = ConnectionFactory.createConnection(c);
   }
 
-  @AfterClass public static void afterClass() throws Exception {
+  @AfterClass
+  public static void afterClass() throws Exception {
     connection.close();
     UTIL.shutdownMiniCluster();
   }
@@ -123,9 +125,9 @@ public class TestMetaTableAccessor {
       List<RegionInfo> regions = admin.getRegions(tn);
       assertEquals(4, regions.size());
       admin.mergeRegionsAsync(regions.get(0).getRegionName(), regions.get(1).getRegionName(), false)
-          .get(60, TimeUnit.SECONDS);
+        .get(60, TimeUnit.SECONDS);
       admin.mergeRegionsAsync(regions.get(2).getRegionName(), regions.get(3).getRegionName(), false)
-          .get(60, TimeUnit.SECONDS);
+        .get(60, TimeUnit.SECONDS);
 
       List<RegionInfo> mergedRegions = admin.getRegions(tn);
       assertEquals(2, mergedRegions.size());
@@ -133,7 +135,7 @@ public class TestMetaTableAccessor {
       RegionInfo mergedRegion1 = mergedRegions.get(1);
 
       List<RegionInfo> mergeParents =
-          MetaTableAccessor.getMergeRegions(connection, mergedRegion0.getRegionName());
+        MetaTableAccessor.getMergeRegions(connection, mergedRegion0.getRegionName());
       assertTrue(mergeParents.contains(regions.get(0)));
       assertTrue(mergeParents.contains(regions.get(1)));
       mergeParents = MetaTableAccessor.getMergeRegions(connection, mergedRegion1.getRegionName());
@@ -158,17 +160,17 @@ public class TestMetaTableAccessor {
     Put put = new Put(Bytes.toBytes(this.name.getMethodName()));
     List<RegionInfo> ris = new ArrayList<>();
     int limit = 10;
-    byte [] previous = HConstants.EMPTY_START_ROW;
+    byte[] previous = HConstants.EMPTY_START_ROW;
     for (int i = 0; i < limit; i++) {
-      RegionInfo ri = RegionInfoBuilder.newBuilder(tn).
-          setStartKey(previous).setEndKey(Bytes.toBytes(i)).build();
+      RegionInfo ri =
+        RegionInfoBuilder.newBuilder(tn).setStartKey(previous).setEndKey(Bytes.toBytes(i)).build();
       ris.add(ri);
     }
     put = MetaTableAccessor.addMergeRegions(put, ris);
     List<Cell> cells = put.getFamilyCellMap().get(HConstants.CATALOG_FAMILY);
     String previousQualifier = null;
     assertEquals(limit, cells.size());
-    for (Cell cell: cells) {
+    for (Cell cell : cells) {
       LOG.info(cell.toString());
       String qualifier = Bytes.toString(cell.getQualifierArray());
       assertTrue(qualifier.startsWith(HConstants.MERGE_QUALIFIER_PREFIX_STR));
@@ -193,12 +195,11 @@ public class TestMetaTableAccessor {
   }
 
   /**
-   * Does {@link MetaTableAccessor#getRegion(Connection, byte[])} and a write
-   * against hbase:meta while its hosted server is restarted to prove our retrying
-   * works.
+   * Does {@link MetaTableAccessor#getRegion(Connection, byte[])} and a write against hbase:meta
+   * while its hosted server is restarted to prove our retrying works.
    */
-  @Test public void testRetrying()
-  throws IOException, InterruptedException {
+  @Test
+  public void testRetrying() throws IOException, InterruptedException {
     final TableName tableName = TableName.valueOf(name.getMethodName());
     LOG.info("Started " + tableName);
     Table t = UTIL.createMultiRegionTable(tableName, HConstants.CATALOG_FAMILY);
@@ -207,8 +208,7 @@ public class TestMetaTableAccessor {
       regionCount = r.getStartKeys().length;
     }
     // Test it works getting a region from just made user table.
-    final List<RegionInfo> regions =
-      testGettingTableRegions(connection, tableName, regionCount);
+    final List<RegionInfo> regions = testGettingTableRegions(connection, tableName, regionCount);
     MetaTask reader = new MetaTask(connection, "reader") {
       @Override
       void metaTask() throws Throwable {
@@ -229,8 +229,8 @@ public class TestMetaTableAccessor {
     writer.start();
 
     // We're gonna check how it takes. If it takes too long, we will consider
-    //  it as a fail. We can't put that in the @Test tag as we want to close
-    //  the threads nicely
+    // it as a fail. We can't put that in the @Test tag as we want to close
+    // the threads nicely
     final long timeOut = 180000;
     long startTime = System.currentTimeMillis();
 
@@ -239,18 +239,17 @@ public class TestMetaTableAccessor {
       assertTrue(reader.isProgressing());
       assertTrue(writer.isProgressing());
 
-      // Kill server hosting meta -- twice  . See if our reader/writer ride over the
-      // meta moves.  They'll need to retry.
+      // Kill server hosting meta -- twice . See if our reader/writer ride over the
+      // meta moves. They'll need to retry.
       for (int i = 0; i < 2; i++) {
         LOG.info("Restart=" + i);
         UTIL.ensureSomeRegionServersAvailable(2);
         int index = -1;
         do {
           index = UTIL.getMiniHBaseCluster().getServerWithMeta();
-        } while (index == -1 &&
-          startTime + timeOut < System.currentTimeMillis());
+        } while (index == -1 && startTime + timeOut < System.currentTimeMillis());
 
-        if (index != -1){
+        if (index != -1) {
           UTIL.getMiniHBaseCluster().abortRegionServer(index);
           UTIL.getMiniHBaseCluster().waitOnRegionServer(index);
         }
@@ -288,8 +287,8 @@ public class TestMetaTableAccessor {
     @Override
     public void run() {
       try {
-        while(!this.stop) {
-          LOG.info("Before " + this.getName()+ ", count=" + this.count);
+        while (!this.stop) {
+          LOG.info("Before " + this.getName() + ", count=" + this.count);
           metaTask();
           this.count += 1;
           LOG.info("After " + this.getName() + ", count=" + this.count);
@@ -303,7 +302,7 @@ public class TestMetaTableAccessor {
 
     boolean isProgressing() throws InterruptedException {
       int currentCount = this.count;
-      while(currentCount == this.count) {
+      while (currentCount == this.count) {
         if (!isAlive()) return false;
         if (this.t != null) return false;
         Thread.sleep(10);
@@ -313,8 +312,7 @@ public class TestMetaTableAccessor {
 
     @Override
     public String toString() {
-      return "count=" + this.count + ", t=" +
-        (this.t == null? "null": this.t.toString());
+      return "count=" + this.count + ", t=" + (this.t == null ? "null" : this.t.toString());
     }
 
     abstract void metaTask() throws Throwable;
@@ -324,8 +322,7 @@ public class TestMetaTableAccessor {
   public void testGetRegionsFromMetaTable() throws IOException, InterruptedException {
     List<RegionInfo> regions = MetaTableLocator.getMetaRegions(UTIL.getZooKeeperWatcher());
     assertTrue(regions.size() >= 1);
-    assertTrue(
-        MetaTableLocator.getMetaRegionsAndLocations(UTIL.getZooKeeperWatcher()).size() >= 1);
+    assertTrue(MetaTableLocator.getMetaRegionsAndLocations(UTIL.getZooKeeperWatcher()).size() >= 1);
   }
 
   @Test
@@ -340,20 +337,18 @@ public class TestMetaTableAccessor {
   }
 
   // Test for the optimization made in HBASE-3650
-  @Test public void testScanMetaForTable()
-  throws IOException, InterruptedException {
+  @Test
+  public void testScanMetaForTable() throws IOException, InterruptedException {
     final TableName tableName = TableName.valueOf(name.getMethodName());
     LOG.info("Started " + tableName);
 
-    /** Create 2 tables
-     - testScanMetaForTable
-     - testScanMetaForTablf
-    **/
+    /**
+     * Create 2 tables - testScanMetaForTable - testScanMetaForTablf
+     **/
 
     UTIL.createTable(tableName, HConstants.CATALOG_FAMILY);
     // name that is +1 greater than the first one (e+1=f)
-    TableName greaterName =
-        TableName.valueOf("testScanMetaForTablf");
+    TableName greaterName = TableName.valueOf("testScanMetaForTablf");
     UTIL.createTable(greaterName, HConstants.CATALOG_FAMILY);
 
     // Now make sure we only get the regions from 1 of the tables at a time
@@ -363,65 +358,54 @@ public class TestMetaTableAccessor {
   }
 
   private static List<RegionInfo> testGettingTableRegions(final Connection connection,
-      final TableName name, final int regionCount)
-  throws IOException, InterruptedException {
+    final TableName name, final int regionCount) throws IOException, InterruptedException {
     List<RegionInfo> regions = MetaTableAccessor.getTableRegions(connection, name);
     assertEquals(regionCount, regions.size());
     Pair<RegionInfo, ServerName> pair =
       MetaTableAccessor.getRegion(connection, regions.get(0).getRegionName());
-    assertEquals(regions.get(0).getEncodedName(),
-      pair.getFirst().getEncodedName());
+    assertEquals(regions.get(0).getEncodedName(), pair.getFirst().getEncodedName());
     return regions;
   }
 
-  private static void testGetRegion(final Connection connection,
-      final RegionInfo region)
-  throws IOException, InterruptedException {
+  private static void testGetRegion(final Connection connection, final RegionInfo region)
+    throws IOException, InterruptedException {
     Pair<RegionInfo, ServerName> pair =
       MetaTableAccessor.getRegion(connection, region.getRegionName());
-    assertEquals(region.getEncodedName(),
-      pair.getFirst().getEncodedName());
+    assertEquals(region.getEncodedName(), pair.getFirst().getEncodedName());
   }
 
   @Test
   public void testParseReplicaIdFromServerColumn() {
     String column1 = HConstants.SERVER_QUALIFIER_STR;
-    assertEquals(0,
-        MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column1)));
+    assertEquals(0, MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column1)));
     String column2 = column1 + MetaTableAccessor.META_REPLICA_ID_DELIMITER;
-    assertEquals(-1,
-        MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column2)));
+    assertEquals(-1, MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column2)));
     String column3 = column2 + "00";
-    assertEquals(-1,
-        MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column3)));
+    assertEquals(-1, MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column3)));
     String column4 = column3 + "2A";
-    assertEquals(42,
-        MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column4)));
+    assertEquals(42, MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column4)));
     String column5 = column4 + "2A";
-    assertEquals(-1,
-        MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column5)));
+    assertEquals(-1, MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column5)));
     String column6 = HConstants.STARTCODE_QUALIFIER_STR;
-    assertEquals(-1,
-        MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column6)));
+    assertEquals(-1, MetaTableAccessor.parseReplicaIdFromServerColumn(Bytes.toBytes(column6)));
   }
 
   /**
    * The info we can get from the regionName is: table name, start key, regionId, replicaId.
    */
   @Test
-  public void testParseRegionInfoFromRegionName() throws IOException  {
-    RegionInfo originalRegionInfo = RegionInfoBuilder.newBuilder(
-      TableName.valueOf(name.getMethodName())).setRegionId(999999L)
-      .setStartKey(Bytes.toBytes("2")).setEndKey(Bytes.toBytes("3"))
-      .setReplicaId(1).build();
-    RegionInfo newParsedRegionInfo = MetaTableAccessor
-      .parseRegionInfoFromRegionName(originalRegionInfo.getRegionName());
+  public void testParseRegionInfoFromRegionName() throws IOException {
+    RegionInfo originalRegionInfo =
+      RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName())).setRegionId(999999L)
+        .setStartKey(Bytes.toBytes("2")).setEndKey(Bytes.toBytes("3")).setReplicaId(1).build();
+    RegionInfo newParsedRegionInfo =
+      MetaTableAccessor.parseRegionInfoFromRegionName(originalRegionInfo.getRegionName());
     assertEquals("Parse TableName error", originalRegionInfo.getTable(),
       newParsedRegionInfo.getTable());
     assertEquals("Parse regionId error", originalRegionInfo.getRegionId(),
       newParsedRegionInfo.getRegionId());
-    assertTrue("Parse startKey error", Bytes.equals(originalRegionInfo.getStartKey(),
-      newParsedRegionInfo.getStartKey()));
+    assertTrue("Parse startKey error",
+      Bytes.equals(originalRegionInfo.getStartKey(), newParsedRegionInfo.getStartKey()));
     assertEquals("Parse replicaId error", originalRegionInfo.getReplicaId(),
       newParsedRegionInfo.getReplicaId());
     assertTrue("We can't parse endKey from regionName only",
@@ -431,20 +415,21 @@ public class TestMetaTableAccessor {
   @Test
   public void testMetaReaderGetColumnMethods() {
     assertArrayEquals(HConstants.SERVER_QUALIFIER, MetaTableAccessor.getServerColumn(0));
-    assertArrayEquals(Bytes.toBytes(HConstants.SERVER_QUALIFIER_STR
-      + MetaTableAccessor.META_REPLICA_ID_DELIMITER + "002A"),
+    assertArrayEquals(
+      Bytes.toBytes(
+        HConstants.SERVER_QUALIFIER_STR + MetaTableAccessor.META_REPLICA_ID_DELIMITER + "002A"),
       MetaTableAccessor.getServerColumn(42));
 
-    assertArrayEquals(HConstants.STARTCODE_QUALIFIER,
-      MetaTableAccessor.getStartCodeColumn(0));
-    assertArrayEquals(Bytes.toBytes(HConstants.STARTCODE_QUALIFIER_STR
-      + MetaTableAccessor.META_REPLICA_ID_DELIMITER + "002A"),
+    assertArrayEquals(HConstants.STARTCODE_QUALIFIER, MetaTableAccessor.getStartCodeColumn(0));
+    assertArrayEquals(
+      Bytes.toBytes(
+        HConstants.STARTCODE_QUALIFIER_STR + MetaTableAccessor.META_REPLICA_ID_DELIMITER + "002A"),
       MetaTableAccessor.getStartCodeColumn(42));
 
-    assertArrayEquals(HConstants.SEQNUM_QUALIFIER,
-      MetaTableAccessor.getSeqNumColumn(0));
-    assertArrayEquals(Bytes.toBytes(HConstants.SEQNUM_QUALIFIER_STR
-      + MetaTableAccessor.META_REPLICA_ID_DELIMITER + "002A"),
+    assertArrayEquals(HConstants.SEQNUM_QUALIFIER, MetaTableAccessor.getSeqNumColumn(0));
+    assertArrayEquals(
+      Bytes.toBytes(
+        HConstants.SEQNUM_QUALIFIER_STR + MetaTableAccessor.META_REPLICA_ID_DELIMITER + "002A"),
       MetaTableAccessor.getSeqNumColumn(42));
   }
 
@@ -458,26 +443,14 @@ public class TestMetaTableAccessor {
 
     long regionId = System.currentTimeMillis();
     RegionInfo primary = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId).setReplicaId(0).build();
     RegionInfo replica1 = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(1)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId).setReplicaId(1).build();
     RegionInfo replica100 = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(100)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId).setReplicaId(100).build();
 
     long seqNum0 = rand.nextLong();
     long seqNum1 = rand.nextLong();
@@ -510,8 +483,8 @@ public class TestMetaTableAccessor {
     }
   }
 
-  public static void assertMetaLocation(Table meta, byte[] row, ServerName serverName,
-      long seqNum, int replicaId, boolean checkSeqNum) throws IOException {
+  public static void assertMetaLocation(Table meta, byte[] row, ServerName serverName, long seqNum,
+    int replicaId, boolean checkSeqNum) throws IOException {
     Get get = new Get(row);
     Result result = meta.get(get);
     assertTrue(Bytes.equals(
@@ -528,11 +501,11 @@ public class TestMetaTableAccessor {
   }
 
   public static void assertEmptyMetaLocation(Table meta, byte[] row, int replicaId)
-      throws IOException {
+    throws IOException {
     Get get = new Get(row);
     Result result = meta.get(get);
     Cell serverCell = result.getColumnLatestCell(HConstants.CATALOG_FAMILY,
-        MetaTableAccessor.getServerColumn(replicaId));
+      MetaTableAccessor.getServerColumn(replicaId));
     Cell startCodeCell = result.getColumnLatestCell(HConstants.CATALOG_FAMILY,
       MetaTableAccessor.getStartCodeColumn(replicaId));
     assertNotNull(serverCell);
@@ -545,12 +518,8 @@ public class TestMetaTableAccessor {
   public void testMetaLocationForRegionReplicasIsAddedAtTableCreation() throws IOException {
     long regionId = System.currentTimeMillis();
     RegionInfo primary = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId).setReplicaId(0).build();
 
     Table meta = MetaTableAccessor.getMetaHTable(connection);
     try {
@@ -567,30 +536,18 @@ public class TestMetaTableAccessor {
   @Test
   public void testMetaLocationForRegionReplicasIsAddedAtRegionSplit() throws IOException {
     long regionId = EnvironmentEdgeManager.currentTime();
-    ServerName serverName0 = ServerName.valueOf("foo", 60010,
-      ThreadLocalRandom.current().nextLong());
+    ServerName serverName0 =
+      ServerName.valueOf("foo", 60010, ThreadLocalRandom.current().nextLong());
     RegionInfo parent = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId).setReplicaId(0).build();
 
     RegionInfo splitA = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(Bytes.toBytes("a"))
-        .setSplit(false)
-        .setRegionId(regionId + 1)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(Bytes.toBytes("a")).setSplit(false)
+      .setRegionId(regionId + 1).setReplicaId(0).build();
     RegionInfo splitB = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(Bytes.toBytes("a"))
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId + 1)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(Bytes.toBytes("a")).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId + 1).setReplicaId(0).build();
 
     try (Table meta = MetaTableAccessor.getMetaHTable(connection)) {
       List<RegionInfo> regionInfos = Lists.newArrayList(parent);
@@ -608,45 +565,33 @@ public class TestMetaTableAccessor {
   @Test
   public void testMetaLocationForRegionReplicasIsAddedAtRegionMerge() throws IOException {
     long regionId = EnvironmentEdgeManager.currentTime();
-    ServerName serverName0 = ServerName.valueOf("foo", 60010,
-      ThreadLocalRandom.current().nextLong());
+    ServerName serverName0 =
+      ServerName.valueOf("foo", 60010, ThreadLocalRandom.current().nextLong());
 
     RegionInfo parentA = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(Bytes.toBytes("a"))
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(Bytes.toBytes("a")).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId).setReplicaId(0).build();
 
     RegionInfo parentB = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(Bytes.toBytes("a"))
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(Bytes.toBytes("a")).setSplit(false)
+      .setRegionId(regionId).setReplicaId(0).build();
     RegionInfo merged = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId + 1)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId + 1).setReplicaId(0).build();
 
     try (Table meta = MetaTableAccessor.getMetaHTable(connection)) {
       List<RegionInfo> regionInfos = Lists.newArrayList(parentA, parentB);
       MetaTableAccessor.addRegionsToMeta(connection, regionInfos, 3);
       MetaTableAccessor.mergeRegions(connection, merged, getMapOfRegionsToSeqNum(parentA, parentB),
-          serverName0, 3);
+        serverName0, 3);
       assertEmptyMetaLocation(meta, merged.getRegionName(), 1);
       assertEmptyMetaLocation(meta, merged.getRegionName(), 2);
     }
   }
 
-  private Map<RegionInfo, Long> getMapOfRegionsToSeqNum(RegionInfo ... regions) {
+  private Map<RegionInfo, Long> getMapOfRegionsToSeqNum(RegionInfo... regions) {
     Map<RegionInfo, Long> mids = new HashMap<>(regions.length);
-    for (RegionInfo region: regions) {
+    for (RegionInfo region : regions) {
       mids.put(region, -1L);
     }
     return mids;
@@ -659,15 +604,14 @@ public class TestMetaTableAccessor {
     final TableName tableName = TableName.valueOf(name.getMethodName());
     final byte[] FAMILY = Bytes.toBytes("family");
     final byte[][] SPLIT_KEYS =
-        new byte[][] { Bytes.toBytes("region_a"), Bytes.toBytes("region_b") };
+      new byte[][] { Bytes.toBytes("region_a"), Bytes.toBytes("region_b") };
 
     UTIL.createTable(tableName, FAMILY, SPLIT_KEYS);
     Table table = connection.getTable(tableName);
     // Make sure all the regions are deployed
     UTIL.countRows(table);
 
-    MetaTableAccessor.Visitor visitor =
-        mock(MetaTableAccessor.Visitor.class);
+    MetaTableAccessor.Visitor visitor = mock(MetaTableAccessor.Visitor.class);
     doReturn(true).when(visitor).visit((Result) anyObject());
 
     // Scanning the entire table should give us three rows
@@ -703,12 +647,8 @@ public class TestMetaTableAccessor {
   public void testMastersSystemTimeIsUsedInUpdateLocations() throws IOException {
     long regionId = System.currentTimeMillis();
     RegionInfo regionInfo = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId).setReplicaId(0).build();
 
     ServerName sn = ServerName.valueOf("bar", 0, 0);
     try (Table meta = MetaTableAccessor.getMetaHTable(connection)) {
@@ -720,12 +660,12 @@ public class TestMetaTableAccessor {
 
       Get get = new Get(regionInfo.getRegionName());
       Result result = meta.get(get);
-      Cell serverCell = result.getColumnLatestCell(HConstants.CATALOG_FAMILY,
-          MetaTableAccessor.getServerColumn(0));
+      Cell serverCell =
+        result.getColumnLatestCell(HConstants.CATALOG_FAMILY, MetaTableAccessor.getServerColumn(0));
       Cell startCodeCell = result.getColumnLatestCell(HConstants.CATALOG_FAMILY,
         MetaTableAccessor.getStartCodeColumn(0));
-      Cell seqNumCell = result.getColumnLatestCell(HConstants.CATALOG_FAMILY,
-        MetaTableAccessor.getSeqNumColumn(0));
+      Cell seqNumCell =
+        result.getColumnLatestCell(HConstants.CATALOG_FAMILY, MetaTableAccessor.getSeqNumColumn(0));
       assertNotNull(serverCell);
       assertNotNull(startCodeCell);
       assertNotNull(seqNumCell);
@@ -743,27 +683,16 @@ public class TestMetaTableAccessor {
     long regionId = System.currentTimeMillis();
 
     RegionInfo regionInfoA = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(new byte[] {'a'})
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(new byte[] { 'a' }).setSplit(false)
+      .setRegionId(regionId).setReplicaId(0).build();
 
     RegionInfo regionInfoB = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(new byte[] {'a'})
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
-    RegionInfo mergedRegionInfo = RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(new byte[] { 'a' }).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId).setReplicaId(0).build();
+    RegionInfo mergedRegionInfo =
+      RegionInfoBuilder.newBuilder(TableName.valueOf(name.getMethodName()))
+        .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+        .setRegionId(regionId).setReplicaId(0).build();
 
     ServerName sn = ServerName.valueOf("bar", 0, 0);
     try (Table meta = MetaTableAccessor.getMetaHTable(connection)) {
@@ -773,7 +702,7 @@ public class TestMetaTableAccessor {
       // write the serverName column with a big current time, but set the masters time as even
       // bigger. When region merge deletes the rows for regionA and regionB, the serverName columns
       // should not be seen by the following get
-      long serverNameTime = EnvironmentEdgeManager.currentTime()   + 100000000;
+      long serverNameTime = EnvironmentEdgeManager.currentTime() + 100000000;
       long masterSystemTime = EnvironmentEdgeManager.currentTime() + 123456789;
 
       // write the serverName columns
@@ -782,8 +711,8 @@ public class TestMetaTableAccessor {
       // assert that we have the serverName column with expected ts
       Get get = new Get(mergedRegionInfo.getRegionName());
       Result result = meta.get(get);
-      Cell serverCell = result.getColumnLatestCell(HConstants.CATALOG_FAMILY,
-          MetaTableAccessor.getServerColumn(0));
+      Cell serverCell =
+        result.getColumnLatestCell(HConstants.CATALOG_FAMILY, MetaTableAccessor.getServerColumn(0));
       assertNotNull(serverCell);
       assertEquals(serverNameTime, serverCell.getTimestamp());
 
@@ -793,19 +722,18 @@ public class TestMetaTableAccessor {
       try {
         // now merge the regions, effectively deleting the rows for region a and b.
         MetaTableAccessor.mergeRegions(connection, mergedRegionInfo,
-            getMapOfRegionsToSeqNum(regionInfoA, regionInfoB), sn, 1);
+          getMapOfRegionsToSeqNum(regionInfoA, regionInfoB), sn, 1);
       } finally {
         EnvironmentEdgeManager.reset();
       }
 
-
       result = meta.get(get);
-      serverCell = result.getColumnLatestCell(HConstants.CATALOG_FAMILY,
-          MetaTableAccessor.getServerColumn(0));
+      serverCell =
+        result.getColumnLatestCell(HConstants.CATALOG_FAMILY, MetaTableAccessor.getServerColumn(0));
       Cell startCodeCell = result.getColumnLatestCell(HConstants.CATALOG_FAMILY,
         MetaTableAccessor.getStartCodeColumn(0));
-      Cell seqNumCell = result.getColumnLatestCell(HConstants.CATALOG_FAMILY,
-        MetaTableAccessor.getSeqNumColumn(0));
+      Cell seqNumCell =
+        result.getColumnLatestCell(HConstants.CATALOG_FAMILY, MetaTableAccessor.getSeqNumColumn(0));
       assertNull(serverCell);
       assertNull(startCodeCell);
       assertNull(seqNumCell);
@@ -852,7 +780,7 @@ public class TestMetaTableAccessor {
 
     final TableName tableName = TableName.valueOf(name.getMethodName());
     try (Admin admin = connection.getAdmin();
-        RegionLocator rl = connection.getRegionLocator(tableName)) {
+      RegionLocator rl = connection.getRegionLocator(tableName)) {
 
       // create a table and prepare for a manual split
       UTIL.createTable(tableName, "cf1");
@@ -861,18 +789,11 @@ public class TestMetaTableAccessor {
       RegionInfo parent = loc.getRegionInfo();
       long rid = 1000;
       byte[] splitKey = Bytes.toBytes("a");
-      RegionInfo splitA = RegionInfoBuilder.newBuilder(parent.getTable())
-          .setStartKey(parent.getStartKey())
-          .setEndKey(splitKey)
-          .setSplit(false)
-          .setRegionId(rid)
-          .build();
-      RegionInfo splitB = RegionInfoBuilder.newBuilder(parent.getTable())
-          .setStartKey(splitKey)
-          .setEndKey(parent.getEndKey())
-          .setSplit(false)
-          .setRegionId(rid)
-          .build();
+      RegionInfo splitA =
+        RegionInfoBuilder.newBuilder(parent.getTable()).setStartKey(parent.getStartKey())
+          .setEndKey(splitKey).setSplit(false).setRegionId(rid).build();
+      RegionInfo splitB = RegionInfoBuilder.newBuilder(parent.getTable()).setStartKey(splitKey)
+        .setEndKey(parent.getEndKey()).setSplit(false).setRegionId(rid).build();
 
       // find the meta server
       MiniHBaseCluster cluster = UTIL.getMiniHBaseCluster();
@@ -896,37 +817,24 @@ public class TestMetaTableAccessor {
   @Test
   public void testEmptyMetaDaughterLocationDuringSplit() throws IOException {
     long regionId = EnvironmentEdgeManager.currentTime();
-    ServerName serverName0 = ServerName.valueOf("foo", 60010,
-      ThreadLocalRandom.current().nextLong());
+    ServerName serverName0 =
+      ServerName.valueOf("foo", 60010, ThreadLocalRandom.current().nextLong());
     RegionInfo parent = RegionInfoBuilder.newBuilder(TableName.valueOf("table_foo"))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId).setReplicaId(0).build();
     RegionInfo splitA = RegionInfoBuilder.newBuilder(TableName.valueOf("table_foo"))
-        .setStartKey(HConstants.EMPTY_START_ROW)
-        .setEndKey(Bytes.toBytes("a"))
-        .setSplit(false)
-        .setRegionId(regionId + 1)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(HConstants.EMPTY_START_ROW).setEndKey(Bytes.toBytes("a")).setSplit(false)
+      .setRegionId(regionId + 1).setReplicaId(0).build();
     RegionInfo splitB = RegionInfoBuilder.newBuilder(TableName.valueOf("table_foo"))
-        .setStartKey(Bytes.toBytes("a"))
-        .setEndKey(HConstants.EMPTY_END_ROW)
-        .setSplit(false)
-        .setRegionId(regionId + 1)
-        .setReplicaId(0)
-        .build();
+      .setStartKey(Bytes.toBytes("a")).setEndKey(HConstants.EMPTY_END_ROW).setSplit(false)
+      .setRegionId(regionId + 1).setReplicaId(0).build();
 
     Table meta = MetaTableAccessor.getMetaHTable(connection);
     try {
       List<RegionInfo> regionInfos = Lists.newArrayList(parent);
       MetaTableAccessor.addRegionsToMeta(connection, regionInfos, 3);
 
-      MetaTableAccessor.splitRegion(connection, parent, -1L, splitA, splitB,
-        serverName0, 3);
+      MetaTableAccessor.splitRegion(connection, parent, -1L, splitA, splitB, serverName0, 3);
       Get get1 = new Get(splitA.getRegionName());
       Result resultA = meta.get(get1);
       Cell serverCellA = resultA.getColumnLatestCell(HConstants.CATALOG_FAMILY,
@@ -957,8 +865,8 @@ public class TestMetaTableAccessor {
     UTIL.createTable(tableName, "cf");
     final List<HRegion> regions = UTIL.getHBaseCluster().getRegions(tableName);
     final String encodedName = regions.get(0).getRegionInfo().getEncodedName();
-    final Result result = MetaTableAccessor.scanByRegionEncodedName(UTIL.getConnection(),
-      encodedName);
+    final Result result =
+      MetaTableAccessor.scanByRegionEncodedName(UTIL.getConnection(), encodedName);
     assertNotNull(result);
     assertTrue(result.advance());
     final String resultingRowKey = CellUtil.getCellKeyAsString(result.current());
@@ -969,9 +877,8 @@ public class TestMetaTableAccessor {
   @Test
   public void testScanByRegionEncodedNameNonExistingRegion() throws Exception {
     final String encodedName = "nonexistingregion";
-    final Result result = MetaTableAccessor.scanByRegionEncodedName(UTIL.getConnection(),
-      encodedName);
+    final Result result =
+      MetaTableAccessor.scanByRegionEncodedName(UTIL.getConnection(), encodedName);
     assertNull(result);
   }
 }
-
